@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/pretrace
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/pretrace/ChangeLog,v 1.4 2005/04/08 18:51:12 taviso Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/pretrace/ChangeLog,v 1.5 2005/07/27 08:09:24 taviso Exp $
+
+*pretrace-0.3-r1 (27 Jul 2005)
+
+  27 Jul 2005; Tavis Ormandy <taviso@gentoo.org> +pretrace-0.3-r1.ebuild:
+  misc improvements.
 
   08 Apr 2005; Tavis Ormandy <taviso@gentoo.org> -pretrace-0.2.ebuild:
   fixing #88391, should return of /proc/self/exe can't be resolved.
